# langextract-api

./: .env.example  .ruff.toml  LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
app/: __init__.py  dependencies.py  extraction_defaults.py  logging_config.py  main.py  schemas.py  tasks.py  worker.py
app/api/: deps.py
app/api/routes/: batch.py  extract.py  extraction.py  tasks.py
app/core/: config.py  constants.py  defaults.py  metrics.py  redis.py  security.py
app/routers/: extraction.py  health.py
app/schemas/: __init__.py  enums.py  extraction.py  health.py  requests.py  responses.py  results.py
app/services/: consensus_model.py  converters.py  downloader.py  extraction_cache.py  extractor.py  model_wrappers.py  provider_manager.py  providers.py  structured_output.py  webhook.py
app/workers/: batch_task.py  celery_app.py  extract_task.py  tasks.py
docker/: Dockerfile  entrypoint.sh
docs/: deployment.md  recipes.md  security.md
examples/configs/: invoice_config.json
examples/curl/: extract_batch.sh  extract_text.sh  extract_url.sh
examples/go/: client.go
examples/python/: client.py
examples/typescript/: client.ts
tests/: conftest.py  test_api.py  test_consensus_model.py  test_downloader.py  test_extraction_cache.py  test_extraction_defaults.py  test_metrics.py  test_model_wrappers.py  test_provider_manager.py  test_schemas.py  test_security.py  test_settings.py  test_structured_output.py  test_tasks.py
